--- a/java_core/pom.xml
+++ b/java_core/pom.xml
@@ -7,7 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>java_core</artifactId>
     <version>1.0-SNAPSHOT</version>
+<dependencies>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.38</version> <!-- Use latest version -->
+        <scope>provided</scope>
+    </dependency>
 
+</dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
